--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  margin-bottom: 60px;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center
 }
 
 .App-logo {
