search and delete

--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -3,7 +3,8 @@
   height: 200px;
   border: 0.1px solid rgba(0, 0, 0, 0.247);
   border-radius: 4px;
-  margin: auto;
+  margin: 40px;
+  margin-top: 40px;
 }
 
 .top {
