--- a/src/styles/SearchBar.module.css
+++ b/src/styles/SearchBar.module.css
@@ -1,12 +1,12 @@
 .form {
   margin: 20px;
-}
-
-.title {
-  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .input {
+  height: 36px;
   margin-right: 10px;
   border-style: none;
   border: 0.1px solid black;
@@ -14,6 +14,9 @@
 }
 
 .button {
+  font-size: 21px;
+  height: 36px;
+  width: 80px;
   button-style: none;
   border: 0.2px solid black;
   border-radius: 5px;
