card optimization, new data to card

--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -1,6 +1,6 @@
 .card {
-  width: 350px;
-  height: 200px;
+  width: 450px;
+  height: 300px;
   border: 0.1px solid rgba(0, 0, 0, 0.247);
   border-radius: 4px;
   margin: 40px;
@@ -25,19 +25,28 @@
   height: 30px;
 }
 
-/* .info {
-
-} */
-
 .outerbox {
   display: flex;
+  align-items: flex-start;
+}
+
+.databox {
+  display: flex;
+  flex-wrap: wrap;
+  width: 310px;
+  padding-top: 20px;
+  padding-left: 20px;
+}
+
+.mainbox {
+  width: 550px;
 }
 
 .box {
-  width: 100px;
-  padding-top: 15px;
+  width: 140px;
+  padding-top: 20px;
 }
 
-.img {
-
+.imgcontainer {
+  padding-top: 20px;
 }
