--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -35,3 +35,31 @@
   display: flex;
   justify-content: flex-end;
 }
+
+
+@media screen and (max-width: 600px) {
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    height: inherit;
+  }
+
+  .brand {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .brand p {
+    font-size: 40px;
+  }
+
+  .search {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .logo {
+    margin-left: 0px;
+  }
+}
+
